src/Layout/Layout.module.css
.mainContainer {
  min-height: calc(100vh - 48px);
  padding: 20px;
  background-color: var(--bg-primary, #1f1f1f);
}

.sidebarButton,
.sidebarButton:link,
.sidebarButton:visited,
.sidebarButton:active {
  background-color: #070707;
  color: #ddd;
  padding: 8px 12px;
  text-decoration: none;
  transition: background-color 0.2s, border-color 0.2s;
  cursor: pointer;
  font-weight: bold;
}

.sidebarButton:hover {
  background-color: #3a3a3a;
}

.sidebarButton:visited,
.sidebarButton:hover:visited {
  color: #ddd;
}

.sidebar {
  position: fixed;
  top: 48px;
  align-self: flex-start;
  height: calc(100vh - 48px);
  overflow-y: auto;
  overflow-x: hidden;
  width: 240px;
  transition: transform 0.3s ease;
  background-color: var(--bg-secondary, #000000);
  color: var(--primary-text-color, #ddd);
  display: flex;
  flex-direction: column;
  z-index: 999;
}

.sidebar.open {
  border-right: 1px var(--primary-border-color, #aaa) solid;
  transform: translateX(0);
}

.sidebar.closed {
  border-right: transparent;
  transform: translateX(-100%);
}

.sidebarTooltip {
  outline: 1px var(--primary-border-color, #ddd) solid;
  background-color: var(--bg-secondary, #000000);
  border-radius: 1rem;
  z-index: 9999;
}

